zeit.content.article changes
============================

3.30.2 (unreleased)
-------------------

- MAINT: Remove obsolete modules: audio, timeline, htmlblock

- MAINT: Remove obsolete video_2 setting


3.30.1 (2017-10-09)
-------------------

- ZON-4180: Use eta instead of countdown for scheduling


3.30.0 (2017-10-04)
-------------------

- ZON-3409: Move from remotetask to celery


3.29.0 (2017-09-28)
-------------------

- ARBEIT-116: Add box which is used as a profile_box in ZAR


3.28.4 (2017-09-27)
-------------------

- BUG-782: Be defensive about body structure and cursor positioning


3.28.3 (2017-09-14)
-------------------

- FIX: Add security declaration after introducing IArticle.header


3.28.2 (2017-09-08)
-------------------

- FIX: Fix typo in article edit view after introducing IArticle.body


3.28.1 (2017-09-07)
-------------------

- ZON-4206: Remove find_first_citation, replaced by `body.find_first(ICitation)`


3.28.0 (2017-09-07)
-------------------

- MAINT: Add `IArticle.body` and `header` convenience helpers


3.27.1 (2017-09-07)
-------------------

- ZON-3885: Remove ad placeholders


3.27.0 (2017-09-06)
-------------------

- ZON-4190: Add module for referencing a podcast


3.26.1 (2017-08-21)
-------------------

- ZON-4152: Add `commentsPremoderate` field to breaking news form

- ZON-4152: Set `is_amp` for breaking news articles


3.26.0 (2017-08-14)
-------------------

- ARBEIT-104: Add function to find first citation in article


3.25.2 (2017-08-08)
-------------------

- ZON-3677: Fill in default title from breaking news push payload template


3.25.1 (2017-08-07)
-------------------

- ARBEIT-86: Add citation layout source


3.25.0 (2017-08-07)
-------------------

- ZON-4006: Move mobile fields to their own form

- MAINT: Remove superfluous IEditable interface

- MAINT: Refactor markup for publishing


3.24.2 (2017-07-18)
-------------------

- BUG-133: Hide the whole "breaking news" info, not just the retract button